Some name refactoring and return pointers instead of non-pointers
